--- a/ambassador/kustomization.yaml
+++ b/ambassador/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-   - ambassador-mesh.yaml
-   #- ambassador-custom.yaml
+   - local-ambassador.yaml
+   - local-ambassador-custom.yaml
