adding extra-config on ambassador config

--- a/ambassador/kustomization.yaml
+++ b/ambassador/kustomization.yaml
@@ -4,5 +4,4 @@ kind: Kustomization
 resources:
    - local-ambassador.yaml
    #- local-ambassador-custom.yaml
-   - aes-crds.yaml
-   
+   - extra-config
