--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 resources:
 - ambassador
 - ambassador/local-ambassador-custom.yaml
+- istio-base
+- istio-base/local-istio-base-custom.yaml
+
