--- a/istio-base/kustomization.yaml
+++ b/istio-base/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-   - istio-crd.yaml
+   - local-istio-base.yaml
+   - local-istio-base-custom.yaml
