--- a/istio-base/kustomization.yaml
+++ b/istio-base/kustomization.yaml
@@ -2,5 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-   - local-istio-base.yaml
-   - local-istio-base-custom.yaml
+   - istio-crd.yaml
