--- a/istio-base/local-istio-base-custom.yaml
+++ b/istio-base/local-istio-base-custom.yaml
@@ -15,4 +15,4 @@ spec:
     path: istio-base/extra-config
   destination:
     server: https://kubernetes.default.svc
-    namespace: ambassador
+    namespace: istio-system
