--- a/ambassador/kustomization.yaml
+++ b/ambassador/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 
 resources:
    - local-ambassador.yaml
-   - local-ambassador-custom.yaml
-   #- extra-config
+   #- local-ambassador-custom.yaml
+   - extra-config
