--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ambassador
-- ambassador/local-ambassador-custom.yaml
+#- ambassador/local-ambassador-custom.yaml
 #- istio-base
 #- istio-base/local-istio-base-custom.yaml
 
