--- a/istio-base/local-istio-base-custom.yaml
+++ b/istio-base/local-istio-base-custom.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: local-ambassador-custom
+  name: istio-base-custom
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
