--- a/istio-base/local-istio-base-custom.yaml
+++ b/istio-base/local-istio-base-custom.yaml
@@ -16,3 +16,6 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: istio-system
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
