--- a/istiod/local-istiod.yaml
+++ b/istiod/local-istiod.yaml
@@ -10,8 +10,8 @@ metadata:
 spec:
   project: local-services
   source:
-    repoURL: https://github.com/istio/istio.git
-    chart: manifests/charts/istio-control/istio-discovery
+    repoURL: https://github.com/istio/istio/tree/master/manifests/charts
+    chart: istio-control/istio-discovery
     targetRevision: 1.13.1
   destination:
     server: https://kubernetes.default.svc
