--- a/istio-base/local-istio-base.yaml
+++ b/istio-base/local-istio-base.yaml
@@ -10,8 +10,8 @@ metadata:
 spec:
   project: local-services
   source:
-    repoURL: https://github.com/istio/istio/tree/master/manifests/charts
-    path: base
+    repoURL: git@github.com:robcarmo/istio.git
+    path: manifests/charts/base
     targetRevision: 1.13.1
   destination:
     server: https://kubernetes.default.svc
