--- a/istio-ingress/local-istio-ingress.yaml
+++ b/istio-ingress/local-istio-ingress.yaml
@@ -13,6 +13,32 @@ spec:
     repoURL: git@github.com:robcarmo/istio.git
     path: manifests/charts/gateways/istio-ingress
     targetRevision: 1.13.1
+    helm:
+      values: |
+        gateways:
+          istio-ingressgateway:
+            ports:
+              - port: 15021
+                targetPort: 15021
+                name: status-port
+                protocol: TCP
+              - port: 81
+                targetPort: 8080
+                name: http2
+                protocol: TCP
+              - port: 8081
+                targetPort: 8081
+                name: admin
+                protocol: TCP
+              - port: 444
+                targetPort: 8443
+                name: https
+                protocol: TCP
+                # This is the port where sni routing happens
+              - port: 15443
+                targetPort: 15443
+                name: tls
+                protocol: TCP
   destination:
     server: https://kubernetes.default.svc
     namespace: istio-system
