--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -24,27 +24,44 @@ spec:
           agent:
             enabled: true 
           createDefaultListeners: false # false is required to allow listeners to be created as custom config, because we have 2 instances of ambassador, for 1 instance this is not required
+          autoscaling: # Autoscalibg minimum setup
+          enabled: false
+          minReplicas: 3
+          maxReplicas: 50
+          metrics:
+          - type: Resource
+            resource:
+              name: cpu
+              target:
+                type: Utilization
+                averageUtilization: 60
+          - type: Resource
+            resource:
+              name: memory
+              target:
+                type: Utilization
+                averageUtilization: 60
           service:
             type: LoadBalancer
             externalTrafficPolicy: "Cluster"
-          # podAnnotations: # begins istio integration config
-          #   traffic.sidecar.istio.io/includeInboundPorts: ""
-          #   traffic.sidecar.istio.io/includeOutboundIPRanges: ""
-          #   proxy.istio.io/config: |
-          #     proxyMetadata:
-          #       OUTPUT_CERTS: /etc/istio-certs
-          #   sidecar.istio.io/userVolumeMount: '[{"name": "istio-certs", "mountPath": "/etc/istio-certs"}]'
-          # volumes:
-          #   - emptyDir:
-          #       medium: Memory
-          #     name: istio-certs
-          # volumeMounts:
-          #   - name: istio-certs
-          #     mountPath: /etc/istio-certs
-          #     readOnly: true
-          # env:
-          #   AMBASSADOR_ISTIO_SECRET_DIR: "/etc/istio-certs"
-          #   AMBASSADOR_ENVOY_BASE_ID: "1" # ends istio integration config
+          podAnnotations: # begins istio integration config
+            traffic.sidecar.istio.io/includeInboundPorts: ""
+            traffic.sidecar.istio.io/includeOutboundIPRanges: ""
+            proxy.istio.io/config: |
+              proxyMetadata:
+                OUTPUT_CERTS: /etc/istio-certs
+            sidecar.istio.io/userVolumeMount: '[{"name": "istio-certs", "mountPath": "/etc/istio-certs"}]'
+          volumes:
+            - emptyDir:
+                medium: Memory
+              name: istio-certs
+          volumeMounts:
+            - name: istio-certs
+              mountPath: /etc/istio-certs
+              readOnly: true
+          env:
+            AMBASSADOR_ISTIO_SECRET_DIR: "/etc/istio-certs"
+            AMBASSADOR_ENVOY_BASE_ID: "1" # ends istio integration config
           #   ambassador_id: "ambassador-mesh" # required because we have 2 instances of ambassador, for a single instance this is not required.
           # metrics: #prometheus integration config begins
           #   serviceMonitor:
