new config to remove sync issues

--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -85,7 +85,11 @@ spec:
   ignoreDifferences:
   - kind: ClusterRole
     namespace: ambassador
-    name: local-amb-edge-stack  
+    name: local-amb-edge-stack
+    jsonPointers:
+    - /spec/replicas  
   - kind: ClusterRole
     namespace: ambassador
     name: local-amb-edge-stack-agent
+    jsonPointers:
+    - /spec/replicas
