new config to remove sync issues

--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -84,6 +84,6 @@ spec:
       - CreateNamespace=true
     ignoreDifferences:
     - group: apps
-      kind: Deployment
+      kind: ClusterRole
       jsonPointers:
       - /spec/replicas
