new config to remove sync issues

--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -84,7 +84,7 @@ spec:
       - CreateNamespace=true
     ignoreDifferences:
     -  group: apps
-       kind: ClusterRole	
+       kind: Deployment
        name: local-amb-edge-stack	
        namespace: ambassador
        jsonPointers:
