new config to remove sync issues

--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -86,6 +86,6 @@ spec:
   - group: apps
     kind: ClusterRole
     namespace: ambassador
-    name: ambassador
+    name: local-amb-edge-stack
     jsonPointers:
     - /spec/replicas
