--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -89,3 +89,9 @@ spec:
     name: local-amb-edge-stack
     jsonPointers:
     - /spec/replicas
+  - group: apps
+    kind: ClusterRole
+    namespace: ambassador
+    name: local-amb-edge-stack-agent
+    jsonPointers:
+    - /spec/replicas
