new config to remove sync issues

--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -83,14 +83,12 @@ spec:
     syncOptions:
       - CreateNamespace=true
   ignoreDifferences:
-  - group: apps
-    kind: ClusterRole
+  - kind: ClusterRole
     namespace: ambassador
     name: local-amb-edge-stack
     jsonPointers:
     - /spec/replicas
-  - group: apps
-    kind: ClusterRole
+  - kind: ClusterRole
     namespace: ambassador
     name: local-amb-edge-stack-agent
     jsonPointers:
