new config to remove sync issues

--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -82,14 +82,14 @@ spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
-  ignoreDifferences:
-  - kind: ClusterRole
-    namespace: (global)
-    name: local-amb-edge-stack
-    jsonPointers:
-    - /spec/replicas
-  - kind: ClusterRole
-    namespace: (global)
-    name: local-amb-edge-stack-agent
-    jsonPointers:
-    - /spec/replicas
+    ignoreDifferences:
+    - kind: ClusterRole
+      namespace: ambassador
+      name: local-amb-edge-stack
+      jsonPointers:
+      - /spec/replicas
+    - kind: ClusterRole
+      namespace: ambassador
+      name: local-amb-edge-stack-agent
+      jsonPointers:
+      - /spec/replicas
