new config to remove sync issues

--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -87,9 +87,9 @@ spec:
       namespace: ambassador
       name: local-amb-edge-stack
       jsonPointers:
-      - /spec/replicas
+      - /spec
     - kind: ClusterRole
       namespace: ambassador
       name: local-amb-edge-stack-agent
       jsonPointers:
-      - /spec/replicas
+      - /spec
