new config ignore

--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -88,3 +88,8 @@ spec:
       name: local-amb-edge-stack
       jsonPointers:
       - /spec
+    - kind: ClusterRole
+      namespace: ambassador
+      name: local-amb-edge-stack-agent
+      jsonPointers:
+      - /spec
