--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -83,7 +83,8 @@ spec:
     syncOptions:
       - CreateNamespace=true
   ignoreDifferences:
-    - kind: ClusterRole
+    - group: rbac.authorization.k8s.io
+      kind: ClusterRole
       namespace: ambassador
       name: local-amb-edge-stack
       jsonPointers:
