new config ignore

--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -88,9 +88,9 @@ spec:
       namespace: ambassador
       name: local-amb-edge-stack
       jsonPointers:
-      - /spec
+      - /rules
     - kind: ClusterRole
       namespace: ambassador
       name: local-amb-edge-stack-agent
       jsonPointers:
-      - /spec
+      - /rules
