--- a/ambassador/local-ambassador.yaml
+++ b/ambassador/local-ambassador.yaml
@@ -88,3 +88,8 @@ spec:
       name: local-amb-edge-stack
       jsonPointers:
       - /rules
+    - group: rbac.authorization.k8s.io
+      kind: ClusterRole
+      name: local-amb-edge-stack-agent
+      jsonPointers:
+      - /rules
